--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+body {
+    background: #dae0e6;
+    margin: 0;
+}
+
+.header {
+    text-align: center;
+    background: #fff url('./assets/images/reddit-logo.png') no-repeat center;
+    background-size: 100px;
+    width: 100%;
+    height: 50px;
+    position: sticky;
+    top: 0;
+    z-index: 99;
+}
+
+mat-progress-bar {
+    .mat-progress-bar-buffer {
+        background-color: #2196F3;
+    }  
+    .mat-progress-bar-fill::after {
+        background-color: #dae0e6;
+    }
+}
+
+* {
+    font-family: 'Open Sans' !important;
+}
