feat: Show snackbar when internet is unavailable

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,10 @@ mat-progress-bar {
     }
 }
 
+.no-internet {
+    background-color: #f44336;
+}
+
 * {
     font-family: 'Open Sans' !important;
 }
