--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import './assets/themes/colors.scss';
+@import './assets/themes/font-sizes.scss';
 
 body {
-    background: #dae0e6;
+    background: var(--color-pattens-blue);
     margin: 0;
 }
 
 .header {
     text-align: center;
-    background: #fff url('./assets/images/reddit-logo.png') no-repeat center;
+    background: var(--color-white) url('./assets/images/reddit-logo.png') no-repeat center;
     background-size: 100px;
     width: 100%;
     height: 50px;
@@ -19,17 +21,20 @@ body {
 
 mat-progress-bar {
     .mat-progress-bar-buffer {
-        background-color: #2196F3;
-    }  
+        background-color: var(--color-dodger-blue);
+    }
     .mat-progress-bar-fill::after {
-        background-color: #dae0e6;
+        background-color: var(--color-pattens-blue);
     }
 }
 
 .no-internet {
-    background-color: #f44336;
+    background-color: var(--color-red-orange);
 }
 
 * {
     font-family: 'Open Sans' !important;
+}
+mat-icon {
+    font-family: 'Material Icons' !important;
 }
