--- a/src/components/details/details.component.html
+++ b/src/components/details/details.component.html
@@ -1,3 +1,39 @@
-<p>
-  details works!
-</p>
+<div class="header"></div>
+<div matRipple class="header-back-button" (click)="navigateBack()">
+    <mat-icon class="icon mat-icon-rtl-mirror">arrow_back</mat-icon>
+</div>
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+    <!-- This is the tree node template for leaf nodes -->
+    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+        <!-- use a disabled button to provide padding for tree leaf -->
+        <button mat-icon-button disabled></button>
+        <div class="comment-section">
+            <p class="author">{{node?.data?.author}}</p>
+            <p>
+                <mat-icon class="upvote-icon mat-icon-rtl-mirror">favorite</mat-icon>&nbsp;
+                <span class="upvotes">{{node?.data?.upvotes}}</span>&nbsp;&middot;
+                <span class="comment-time">{{node?.data?.created | date:'shortTime'}}</span>
+            </p>
+            <p class="comment-text">{{node?.data?.body}}</p>
+        </div>
+    </mat-tree-node>
+    <!-- This is the tree node template for expandable nodes -->
+    <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
+        <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.name">
+            <p>
+                <mat-icon class="mat-icon-rtl-mirror">
+                    {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                </mat-icon>
+            </p>
+        </button>
+        <div class="comment-section">
+            <p class="author">{{node?.data?.author}}</p>
+            <p>
+                <mat-icon class="upvote-icon mat-icon-rtl-mirror">favorite</mat-icon>&nbsp;
+                <span class="upvotes">{{node?.data?.upvotes}}</span>&nbsp;&middot;
+                <span class="comment-time">{{node?.data?.created | date:'shortTime'}}</span>
+            </p>
+            <p class="comment-text">{{node?.data?.body}}</p>
+        </div>
+    </mat-tree-node>
+</mat-tree>
