feat: Change like icon and scroll to top when page loads

--- a/src/components/details/details.component.html
+++ b/src/components/details/details.component.html
@@ -10,7 +10,7 @@
         <div class="comment-section">
             <p class="author">{{node?.data?.author}}</p>
             <p>
-                <mat-icon class="upvote-icon mat-icon-rtl-mirror">favorite</mat-icon>&nbsp;
+                <mat-icon class="upvote-icon mat-icon-rtl-mirror">thumb_up</mat-icon>&nbsp;
                 <span class="upvotes">{{node?.data?.upvotes}}</span>&nbsp;&middot;
                 <span class="comment-time">{{node?.data?.created | date:'shortTime'}}</span>
             </p>
@@ -29,7 +29,7 @@
         <div class="comment-section">
             <p class="author">{{node?.data?.author}}</p>
             <p>
-                <mat-icon class="upvote-icon mat-icon-rtl-mirror">favorite</mat-icon>&nbsp;
+                <mat-icon class="upvote-icon mat-icon-rtl-mirror">thumb_up</mat-icon>&nbsp;
                 <span class="upvotes">{{node?.data?.upvotes}}</span>&nbsp;&middot;
                 <span class="comment-time">{{node?.data?.created | date:'shortTime'}}</span>
             </p>
